--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{A404E22F-6A16-4F80-B0A7-1F0970223891}</ProjectGuid>
     <RootNamespace>Project</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>OpenGL_3D_Render</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
